# periscope

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
chaos/: README.md  __init__.py  app.py  failures.py  models.py  telemetry.py
decisions/: 0000-adr-template.md  README.md  adr-0001-clickhouse-telemetry-schema.md  adr-0001-spans-schema.md  adr-0003-ingest-buffer.md  adr-0006-agent-tool-api.md  adr-0011-qx-contract-and-schema-context.md  adr-0012-langchain-langgraph-agentic-runtime.md
docker/: otel-collector.yaml
src/periscope/qx/: __init__.py  langchain.py  models.py  schema.py
src/periscope/schemas/clickhouse/: 0001_create_database.sql  0001_create_spans.sql
src/periscope/tools/: __init__.py  base.py  builtins.py  langchain.py  models.py  policy.py  recording.py  registry.py  runner.py
src/periscope/tools/clickhouse/: __init__.py  executor.py  models.py  sql.py  tool.py
tests/: test_package.py
tests/chaos/: test_app.py
tests/integration/: test_clickhouse_tool.py  test_otel_roundtrip.py  test_qx_schema.py
tests/qx/: test_langchain.py  test_models.py  test_schema.py
tests/tools/: test_builtins.py  test_clickhouse_query.py  test_contract.py  test_langchain_adapter.py  test_runner.py
