[project]
name = "periscope"
version = "0.1.0"
description = "Agentic observability investigator for LLM application traces and service telemetry."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-semantic-conventions>=0.50b0",
    "pydantic>=2.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py312"

[tool.ruff.lint]
select = [
    "B",
    "E",
    "F",
    "I",
    "RUF",
    "SIM",
    "UP",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.mypy]
mypy_path = "src"
packages = ["periscope"]
plugins = ["pydantic.mypy"]
python_version = "3.12"
show_error_codes = true
strict = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
